WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125862
Assertion failure seen running some mixed-content tests
https://bugs.webkit.org/show_bug.cgi?id=125862
Summary
Assertion failure seen running some mixed-content tests
mitz
Reported
2013-12-17 11:33:58 PST
Fix an assertion failure seen running some mixed-content tests
Attachments
Remove a bogus assertion
(1.32 KB, patch)
2013-12-17 11:35 PST
,
mitz
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2013-12-17 11:35:12 PST
Created
attachment 219434
[details]
Remove a bogus assertion
Alexey Proskuryakov
Comment 2
2013-12-17 11:41:33 PST
Comment on
attachment 219434
[details]
Remove a bogus assertion View in context:
https://bugs.webkit.org/attachment.cgi?id=219434&action=review
> Source/WebKit2/UIProcess/PageLoadState.cpp:-275 > - ASSERT(m_uncommittedState.url.startsWith("https:", false));
This is a new assertion that seem OK to remove for now, but the code looks very surprising and inconsistent. canRunInsecureContent is invoked with m_document, and canDisplayInsecureContent is invoked with topFrame->document()
mitz
Comment 3
2013-12-17 11:43:25 PST
Fixed in <
http://trac.webkit.org/r160718
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug