Fixed an assertion failure seen running some mixed-content tests. https://bugs.webkit.org/show_bug.cgi?id=125862

Reviewed by Alexey Proskuryakov.

* UIProcess/PageLoadState.cpp:
(WebKit::PageLoadState::didDisplayOrRunInsecureContent): Removed an assertion about the URL
of the main frame when dealing with a notification that could have come from any frame.



Canonical link: https://commits.webkit.org/143874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160718 268f45cc-cd09-0410-ab3c-d52691b4dbfc